# api

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  main.tf  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_create_youtube_tokens.py
app/config/: conf.py
app/database/: db.py  models.py  token_store.py
app/goods/models/: goods.py
app/goods/routers/: goods.py
app/services/: __init__.py  youtube_shorts_uploader.py
app/uploads/: __init__.py
app/uploads/routers/: uploads.py
scripts/: migrate.sh
